--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon-Digital Marketing</title>
 </head>
 
 <body>
-    <div class="header">
+    <!-- Header -->
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,10 +24,13 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
+
+    <!-- Main Conetent-->
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <!--Id was not included-->
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -48,6 +52,8 @@
             </p>
         </div>
     </div>
+
+    <!-- Additional content -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,12 +77,15 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+
+    <!-- Footer Content -->
+
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
